fixed color input on firefox and also made the number input more responsive

--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,17 @@ body {
 
 
 
-input[type="color"]::-webkit-color-swatch {
+input[type="color"]::-webkit-color-swatch
+{
   border: 1px solid rgb(0, 0, 0);
   border-radius: 50%;
 }
-
+input[type="color"]::-moz-color-swatch {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 50%;
+  width: 1.7rem;
+  height: 1.7rem;
+}
 
 ::-webkit-scrollbar {
   width: 0.4em;
